--- a/chat.html
+++ b/chat.html
@@ -20,7 +20,7 @@
 				"doFind":true,
 				"fieldName":"LastName",
 				"isExactMatch":true,
-				"label":"Last Name"
+				"label":"Last NameS"
 				}, {
 				"doCreate":false,
 				"doFind":true,
@@ -45,7 +45,8 @@
 				"label":"Email"
 				}],
 				"entityName":"Case"
-		}];
+			}
+		];
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
