--- a/chat.html
+++ b/chat.html
@@ -16,37 +16,26 @@
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 		embedded_svc.settings.extraPrechatInfo = [{
 			"entityFieldMaps": [{
-				"doCreate":false,
-				"doFind":true,
-				"fieldName":"LastName",
-				"isExactMatch":true,
-				"label":"Last NameS"
-				}, {
-				"doCreate":false,
-				"doFind":true,
-				"fieldName":"FirstName",
-				"isExactMatch":true,
-				"label":"First Name"
-				}, {
-				"doCreate":false,
-				"doFind":true,
-				"fieldName":"Email",
-				"isExactMatch":true,
-				"label":"Email"
-				}],
-				"entityName":"Contact"
-			},
-			{
-			"entityFieldMaps": [{
-				"doCreate":false,
-				"doFind":true,
-				"fieldName":"SuppliedEmail",
-				"isExactMatch":true,
-				"label":"Email"
-				}],
-				"entityName":"Case"
-			}
-		];
+			"doCreate":false,
+			"doFind":true,
+			"fieldName":"LastName",
+			"isExactMatch":true,
+			"label":"LastName"
+			}, {
+			"doCreate":false,
+			"doFind":true,
+			"fieldName":"FirstName",
+			"isExactMatch":true,
+			"label":"FirstName"
+			}, {
+			"doCreate":false,
+			"doFind":true,
+			"fieldName":"Email",
+			"isExactMatch":true,
+			"label":"Email"
+			}],
+			"entityName":"Contact"
+		}];
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
