--- a/chat.html
+++ b/chat.html
@@ -20,13 +20,13 @@
 			"doFind":true,
 			"fieldName":"LastName",
 			"isExactMatch":true,
-			"label":"Last Name"
+			"label":"LastName"
 			}, {
 			"doCreate":false,
 			"doFind":true,
 			"fieldName":"FirstName",
 			"isExactMatch":true,
-			"label":"First Name"
+			"label":"FirstName"
 			}, {
 			"doCreate":false,
 			"doFind":true,
@@ -34,7 +34,8 @@
 			"isExactMatch":true,
 			"label":"Email"
 			}],
-			"entityName":"Contact"
+			"entityName":"Contact",
+			"linkToEntityName": ""
 		}];
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
