--- a/chat.html
+++ b/chat.html
@@ -7,6 +7,9 @@
 		.embeddedServiceHelpButton .helpButton .uiButton:focus {
 			outline: 1px solid #005290;
 		}
+		.embeddedServiceSidebarFormField.inputSplitName {
+			display: none;
+		}
 	</style>
 	
 	<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
@@ -21,13 +24,15 @@
 				"fieldName":"LastName",
 				"isExactMatch":true,
 				"label":"Last Name"
-				}, {
+				}, 
+				{
 				"doCreate":false,
 				"doFind":false,
 				"fieldName":"FirstName",
 				"isExactMatch":true,
 				"label":"First Name"
-				}, {
+				}, 
+				{
 				"doCreate":false,
 				"doFind":false,
 				"fieldName":"Email",
@@ -36,7 +41,6 @@
 				}],
 				"entityName":"Contact",
 				"linkToEntityName": ""
-
 			}];
 	
 			//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
