--- a/chat.html
+++ b/chat.html
@@ -8,7 +8,7 @@
 			outline: 1px solid #005290;
 		}
 		.embeddedServiceSidebarFormField.inputSplitName {
-			display: none;
+			display: none!important;
 		}
 	</style>
 	
