--- a/chat.html
+++ b/chat.html
@@ -7,7 +7,7 @@
 		.embeddedServiceHelpButton .helpButton .uiButton:focus {
 			outline: 1px solid #005290;
 		}
-		.embeddedServiceSidebarFormField.inputSplitName {
+		.inputSplitName {
 			display: none!important;
 		}
 	</style>
@@ -17,6 +17,10 @@
 		var initESW = function(gslbBaseURL) {
 			embedded_svc.settings.displayHelpButton = true; //Or false
 			embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+			embedded_svc.settings.prepopulatedPrechatFields = {
+				FirstName: "<First_Name_Here>",
+				LastName: "<Last_Name_Here>"
+			};
 			embedded_svc.settings.extraPrechatInfo = [{
 				"entityFieldMaps": [{
 				"doCreate":false,
