--- a/chat.html
+++ b/chat.html
@@ -18,7 +18,7 @@
 			embedded_svc.settings.displayHelpButton = true; //Or false
 			embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 			embedded_svc.settings.prepopulatedPrechatFields = {
-				FirstName: "customer",
+				FirstName: "<First_Name_Here>",
 				LastName: "<Last_Name_Here>"
 			};
 			embedded_svc.settings.extraPrechatInfo = [{
