--- a/chat.html
+++ b/chat.html
@@ -1,111 +1,64 @@
 <html>
-	<style type='text/css'>
-		.embeddedServiceHelpButton .helpButton .uiButton {
-			background-color: #005290;
-			font-family: "Arial", sans-serif;
-		}
-		.embeddedServiceHelpButton .helpButton .uiButton:focus {
-			outline: 1px solid #005290;
-		}
-		.inputSplitName {
-			display: none!important;
-		}
-	</style>
-	
-	<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
-	<script type='text/javascript'>
-		var initESW = function(gslbBaseURL) {
-			embedded_svc.settings.displayHelpButton = true; //Or false
-			embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-			embedded_svc.settings.prepopulatedPrechatFields = {
-				FirstName: "customer",
-				LastName: "<Last_Name_Here>"
-			};
-			embedded_svc.settings.extraPrechatInfo = [{
-				"entityFieldMaps": [{
-				"doCreate":false,
-				"doFind":false,
-				"fieldName":"LastName",
-				"isExactMatch":true,
-				"label":"Last Name"
-				}, 
-				{
-				"doCreate":false,
-				"doFind":false,
-				"fieldName":"FirstName",
-				"isExactMatch":true,
-				"label":"First Name"
-				}, 
-				{
-				"doCreate":false,
-				"doFind":false,
-				"fieldName":"Email",
-				"isExactMatch":true,
-				"label":"Email"
-				}],
-				"entityName":"Contact",
-				"linkToEntityName": ""
-			},
+<style type='text/css'>
+	.embeddedServiceHelpButton .helpButton .uiButton {
+		background-color: #005290;
+		font-family: "Arial", sans-serif;
+	}
+	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+		outline: 1px solid #005290;
+	}
+</style>
+
+<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+<script type='text/javascript'>
+	var initESW = function(gslbBaseURL) {
+		embedded_svc.settings.displayHelpButton = true; //Or false
+		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+
+		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
+		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+
+		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
+
+		// Settings for Chat
+		//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+			// Returns a valid button ID.
+		//};
+		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
+		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+
+		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+		embedded_svc.settings.entryFeature = 'LiveAgent';
+
+		embedded_svc.init(
+			'https://hondamotoreurope--uat.sandbox.my.salesforce.com',
+			'https://hondamotoreurope--uat.sandbox.my.site.com/hondadealerhub',
+			gslbBaseURL,
+			'00D3M0000008n9B',
+			'First_Line_Support',
 			{
-				"entityFieldMaps": [{
-				"doCreate":true,
-				"doFind":false,
-				"fieldName":"SuppliedEmail",
-				"label":"Email"
-				},
-				{
-				"doCreate":true,
-				"doFind":false,
-				"fieldName":"SuppliedName",
-				"label":"Name"
-				}],
-				"entityName":"Case",
-			}];
-	
-			//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-			//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-	
-			//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-			//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
-	
-			// Settings for Chat
-			//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-				// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-				// Returns a valid button ID.
-			//};
-			//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-			//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-	
-			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-			embedded_svc.settings.entryFeature = 'LiveAgent';
-	
-			embedded_svc.init(
-				'https://hondamotoreurope--arlanisdev.sandbox.my.salesforce.com',
-				'https://hondamotoreurope--arlanisdev.sandbox.my.site.com/dealerhub',
-				gslbBaseURL,
-				'00D3H0000008rAo',
-				'First_Line_Support',
-				{
-					baseLiveAgentContentURL: 'https://c.la1-c1cs-lo2.salesforceliveagent.com/content',
-					deploymentId: '5723H000000CcLz',
-					buttonId: '5733H000000CaZ5',
-					baseLiveAgentURL: 'https://d.la1-c1cs-lo2.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'First_Line_Support',
-					isOfflineSupportEnabled: true
-				}
-			);
+				baseLiveAgentContentURL: 'https://c.la1-c1cs-lo3.salesforceliveagent.com/content',
+				deploymentId: '5723M000000CaVY',
+				buttonId: '5733M000000CaWg',
+				baseLiveAgentURL: 'https://d.la1-c1cs-lo3.salesforceliveagent.com/chat',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I3M000000CaYmUAK_1880c8d7a7e',
+				isOfflineSupportEnabled: true
+			}
+		);
+	};
+
+	if (!window.embedded_svc) {
+		var s = document.createElement('script');
+		s.setAttribute('src', 'https://hondamotoreurope--uat.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.onload = function() {
+			initESW(null);
 		};
-	
-		if (!window.embedded_svc) {
-			var s = document.createElement('script');
-			s.setAttribute('src', 'https://hondamotoreurope--arlanisdev.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-			s.onload = function() {
-				initESW(null);
-			};
-			document.body.appendChild(s);
-		} else {
-			initESW('https://service.force.com');
-		}
-	</script>
+		document.body.appendChild(s);
+	} else {
+		initESW('https://service.force.com');
+	}
+</script>
 </html>
